# LightMyInk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults  setup.sh
components/GfxLibrary/: CMakeLists.txt
components/Time/: CMakeLists.txt
main/: CMakeLists.txt  Watchy.cpp  Watchy.h  WatchyRTC.cpp  WatchyRTC.h  Watchy_7_SEG.cpp  Watchy_7_SEG.h  battery.cpp  battery.h  core.cpp  core.h  deep_sleep.cpp  deep_sleep.h  deep_sleep_utils.h  display.cpp  display.h  draw.cpp  draw.h  hardware.h  idf_component.yml  light.cpp  light.h  lut.h  main.cpp  menu.cpp  peripherals.cpp  peripherals.h  power.cpp  power.h  settings.h  time.cpp  time.h  touch.cpp  touch.h  ui.cpp  ui.h  uspi.h  watchface.cpp  watchface.h  watchface_default.cpp  (+1 more)
